overflow fix

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -60,7 +60,7 @@ body {
 
     .description-container {
         overflow-y: hidden;
-        height: 70px;
+        height: 76px;
 
         .description {
             font-size: 9px;
@@ -86,8 +86,8 @@ body {
     display: block;
 }
 
-.height-18px {
-    height: 18px;
+.height-20px {
+    height: 20px;
 }
 
 .dateFilter {
